--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,9 @@ body {
     --chart-5: 340 75% 55%;
   }
 }
-
+.cl-providerIcon__apple{
+  filter: invert(1);
+}
 @layer base {
   * {
     @apply border-border;
